# mcp-server-redaction

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_dev.py
docs/plans/: 2026-02-08-file-format-support-design.md  2026-02-08-file-format-support-implementation.md  2026-02-08-mcp-redaction-server-design.md  2026-02-08-mcp-redaction-server-implementation.md  2026-02-09-hybrid-detection.md  2026-02-09-redaction-review-ui-design.md  2026-02-14-surgical-file-redaction-design.md  2026-02-14-surgical-file-redaction-implementation.md  2026-02-16-recognition-precision-design.md  2026-02-16-recognition-precision-implementation.md
src/mcp_server_redaction/: engine.py  llm_reviewer.py  server.py  state.py
src/mcp_server_redaction/handlers/: __init__.py  base.py  doc.py  docx_handler.py  pdf.py  plain_text.py  xlsx.py
src/mcp_server_redaction/recognizers/: __init__.py  financial.py  gliner_setup.py  medical.py  secrets.py
src/mcp_server_redaction/tools/: __init__.py  analyze.py  configure.py  redact.py  redact_file.py  unredact.py  unredact_file.py
tests/: test_engine.py  test_gliner.py  test_handlers.py  test_integration.py  test_llm_reviewer.py  test_recognizers.py  test_server.py  test_state.py  test_tools.py
