[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-redaction"
version = "0.1.0"
description = "MCP server for redacting sensitive data from text"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "presidio-analyzer",
    "presidio-anonymizer",
    "spacy",
    "PyMuPDF",
    "openpyxl",
    "python-docx",
]

[project.scripts]
mcp-server-redaction = "mcp_server_redaction.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
